# jandering_engine

./: .gitignore  Cargo.toml  README.md  Readme.md  index.html
.cargo/: config.toml
examples/: moneky.rs  test.rs  triangle.rs  triangles.rs
examples/2d/: main.rs
examples/galaxy/: main.rs  triangle_shader.wgsl
examples/galaxy/billboard/: definition.rs  mod.rs
examples/galaxy/custom_camera/: definition.rs  mod.rs
examples/grass/: grass_object.rs  grass_shader.wgsl  ground_shader.wgsl  main.rs  star_object.rs  star_shader.wgsl  terrain_shader.wgsl
examples/instancing/: main.rs  star_shader.wgsl
examples/instancing/billboard/: definition.rs  mod.rs
examples/instancing/custom_camera/: definition.rs  mod.rs
examples/moneky/: main.rs
examples/ray_marching/: main.rs  shader.wgsl
examples/test/: main.rs
jandering_engine/: Cargo.toml
jandering_engine/examples/grass/: grass_object.rs  main.rs  star_object.rs  star_shader.wgsl
jandering_engine/examples/moneky/: main.rs
jandering_engine/examples/shadowmapping/: light.rs  light_shader.wgsl  main.rs  popr_shader.wgsl  shader.wgsl
jandering_engine/examples/test/: main.rs
jandering_engine/src/: bind_group.rs  compute_pass.rs  engine.rs  lib.rs  rc_vec.rs  render_pass.rs  renderer.rs  utils.rs
jandering_engine/src/bind_group/: mod.rs  resolution.rs  texture.rs
jandering_engine/src/bind_group/camera/: mod.rs
jandering_engine/src/bind_group/camera/d2/: mod.rs
jandering_engine/src/bind_group/camera/free/: constants.rs  mod.rs
jandering_engine/src/implementation/renderer/wgpu/: bind_groups.rs  mod.rs
jandering_engine/src/object/: mod.rs  primitives.rs
jandering_engine/src/shader/: flat_shader.wgsl  mod.rs
jandering_engine/src/texture/: mod.rs  sampler.rs
jandering_engine/src/utils/: free_camera.rs  mod.rs  texture.rs
je_windowing/: Cargo.toml
je_windowing/examples/: test.rs
je_windowing/src/: lib.rs  winit_window.rs  winit_window_manager.rs
lib/better_winit_wasm_test/: Cargo.toml
lib/wasm_test/: index.html
lib/wasm_test/src/: lib.rs
res/: player.png~  test_map.map  tilemap.png~
src/: engine.rs  event_handler.rs  instance.rs  lib.rs  main.rs  render_pass.rs  renderer.rs  shader.wgsl  shader_base.wgsl  types.rs  utils.rs  window.rs
src/billboard/: definition.rs
src/bind_group/: mod.rs  resolution.rs  texture.rs  time.rs
src/bind_group/camera/: mod.rs
src/bind_group/camera/d2/: definition.rs  mod.rs
src/bind_group/camera/flat/: mod.rs
src/bind_group/camera/free/: constants.rs  definition.rs  mod.rs
src/camera/: constants.rs  definition.rs  mod.rs
src/core/: Untitled-1.rs  engine.rs  event_handler.rs  mod.rs  renderer.rs  window.rs
src/core/bind_group/: mod.rs  resolution.rs  texture.rs
src/core/bind_group/camera/d2/: mod.rs
src/core/bind_group/camera/free/: mod.rs
src/core/object/: mod.rs  primitives.rs
src/core/renderer/: bind_groups.rs  mod.rs  render_pass.rs  shaders.rs  textures.rs
src/core/shader/: default_shader.wgsl  flat_shader.wgsl  mod.rs
src/core/texture/: mod.rs
src/custom_camera/: definition.rs  mod.rs
src/engine/: default_plugins.rs  definition.rs  mod.rs
src/game/: constants.rs  definition.rs  hue_plugin.rs  mod.rs
src/game/map/: map_bind_group.rs  map_shader.wgsl  mod.rs  tiles.rs
src/game/player/: mod.rs  player_shader.wgsl
src/game/post_processing/: add_shader.wgsl  bind_groups.rs  bloom_shader.wgsl  mod.rs
src/game/ui/: mod.rs
src/implementation/renderer/: wgpu.rs
src/implementation/renderer/wgpu/: bind_groups.rs  compute_pass.rs  mod.rs  render_pass.rs  shaders.rs  textures.rs
src/implementation/window/: winit.rs
src/object/: definition.rs  mod.rs  primitives.rs
src/pipeline/: mod.rs
src/plugin/: mod.rs
src/plugins/: mod.rs  resolution.rs  time.rs
src/plugins/resolution/: mod.rs
src/plugins/time/: mod.rs
src/renderer/: default_shader.wgsl  definition.rs  mod.rs
src/shader/: default_shader.wgsl  flat_shader.wgsl  mod.rs
src/texture/: mod.rs
