[package]
name = "jandering_engine"
version = "0.1.0"
edition = "2021"
authors = ["Jan Goličnik <jan@nejka.net>"]
description = "Bare bones rendering framework"
keywords = ["rendering"]
license = "MPL-2.0"
repository = "https://github.com/JanGolicnik/jandering_engine"
rust-version = "1.65"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.0"
pollster = "0.3.0"
winit = "0.28.0"
wgpu = "0.18.0"
cfg-if = "1.0.0"
web-time = "1.0.0"
image = {version = "0.24.8", features = ["png", "jpeg"], default-features = false}
reqwest = "0.11.24"
anyhow = "1.0.79"
glam = {version = "0.25.0", features = ["bytemuck"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = {version = "0.18.0", features = ["webgl"]}
web-sys = { version = "0.3.0", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
