[package]
name = "je_windowing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.1", features = ["rwh_06", "x11" ], default-features = false }
web-time = "1.0.0"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.57"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.0", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Screen",
]}
